Small fixes & housekeeping.